chore: implemented support for run artifacts
